# poe-autocrafter

./: README.md  pyproject.toml  run.py
src/: __init__.py
src/model/: item.py
src/utils/: parser.py
tests/parser/: test_parser_body_armour_rare_no_1l_1_0_none_no_1_yes_no_poe.py  test_parser_body_armour_rare_no_3l_6_0_none_no_0_no_no_poe.py  test_parser_body_armour_rare_no_6l_6_20_shaper_&_elder_yes_multicraft_yes_no_poe.py  test_parser_body_armour_unique_double_6l_6_20_none_no_0_no_no_poe.py  test_parser_weapon_2h_rare_no_1l_1_0_none_no_1_yes_no_poe.py  test_parser_weapon_2h_rare_no_3l_6_0_none_no_0_no_no_poe.py  test_parser_weapon_2h_rare_no_6l_6_20_none_yes_multicraft_yes_no_poe.py  test_parser_weapon_2h_unique_double_6l_6_20_none_no_0_yes_yes_poe.py
tests/parser/files/: body_armour_rare_no_1l_1_0_none_no_1_yes_no_poe.txt  body_armour_rare_no_3l_6_0_none_no_0_no_no_poe.txt  body_armour_rare_no_6l_6_20_shaper_&_elder_yes_multicraft_yes_no_poe.txt  body_armour_unique_double_6l_6_20_none_no_0_no_no_poe.txt  weapon_2h_rare_no_1l_1_0_none_no_1_yes_no_poe.txt  weapon_2h_rare_no_3l_6_0_none_no_0_no_no_poe.txt  weapon_2h_rare_no_6l_6_20_none_yes_multicraft_yes_no_poe.txt  weapon_2h_unique_double_6l_6_20_none_no_0_yes_yes_poe.txt
