[tool.poetry]
name = "poe-autocrafter"
version = "0.1.0"
description = ""
authors = ["CDNievas <cdnievas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
